[package]
name = "banker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.1", features = ["derive"] }
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
